<?xml version="1.0"?>
<package format="2">
  <name>path_searching</name>
  <version>0.0.0</version>
  <description>The path_searching package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>traj_opt</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>map</build_depend>
  <build_depend>control</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>traj_opt</build_export_depend>
  <build_export_depend>utils</build_export_depend>
  <build_export_depend>map</build_export_depend>
  <build_export_depend>control</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>rviz_visual_tools</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>traj_opt</exec_depend>
  <exec_depend>utils</exec_depend>
  <exec_depend>map</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>





  <export>
  </export>
</package>
